fixed the wrapping issue with the nav and the logo plus the 0 top/bottom padding for tablets

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -10,7 +10,8 @@
   margin: 0 auto;
 
   .tabletPortrait({
-    padding: 0 1%;
+    padding-right: 1%;
+    padding-left: 1%;
     });
 }
 
@@ -46,8 +47,7 @@
 
     .mobileLandscape({
       z-index: @zindexNav;
-      position: fixed;    
-      padding-top: 0;      
+      position: fixed;         
       width: 100%;
       top: 0;
     });
