--- a/assets/less/modules/header.less
+++ b/assets/less/modules/header.less
@@ -132,6 +132,10 @@
   float: right;  
   height: 100%;
 
+  .betweenMobileTablet({
+    display: none;
+  });
+
   ul {
     list-style-type: none;
     padding: 0;
